added tabs & started the edit dialog

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -22,7 +22,7 @@
 // @import "./componenets/addGroupFilter";
 // @import "./componenets/loader";
 @import "./componenets/appHeader";
-// @import "./componenets/taskList";
+@import "./componenets/appDialog";
 
 // Views
 // @import "./views/home";
