added the edit list option' and some sass

--- a/src/assets/styles/componenets/_appDialog.scss
+++ b/src/assets/styles/componenets/_appDialog.scss
@@ -1,5 +1,10 @@
 .app-dialog {
     position: absolute;
-    
-   
+    top: 0;
+    background-color: #fff;
+    margin-block: rem(20px);
+    padding: 1rem;
+    max-height: 90vh;
+    overflow: hidden;
+    border-radius: 16px;
 }
