--- a/src/assets/styles/basics/_helpers.scss
+++ b/src/assets/styles/basics/_helpers.scss
@@ -34,6 +34,10 @@
         flex-grow: 1;
     }
 
+    & .align-self-end{
+       align-self: flex-end;
+    }
+
     &.flex-wrap {
         flex-wrap: wrap;
     }
@@ -68,17 +72,16 @@
 .screen {
     position: fixed;
     inset: 0;
-    top: $header-height;
     background-color: rgba(76, 74, 74, 0.6);
     z-index: 0;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.8s;
-    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     width: 100vw;
+    overflow-y: auto;
 
     &.screen-open {
         opacity: 1;
@@ -106,6 +109,12 @@
 
 .m-0 {
     margin: 0;
+}
+
+// cursor 
+
+.cursor-pointer {
+    cursor: pointer;
 }
 
 
