--- a/src/assets/styles/views/_personDetails.scss
+++ b/src/assets/styles/views/_personDetails.scss
@@ -1,7 +1,7 @@
 .person-details {
     direction: rtl;
     height: 100%;
-    
+
 
     .person-details-header {
         width: 100%;
@@ -9,12 +9,55 @@
         border-bottom: 1px solid #ddd;
     }
 
+    .side-nav {
+        height: 100%;
+        padding: 1rem;
+        border-inline-end: 1px solid #ddd;
+    }
+
     .prefs-container {
         width: fit-content;
-        border-inline-end: 1px solid #ddd;
+        gap: 1.5rem;
+        margin-bottom: 1.5rem;
+    }
 
+    .person-edit {
+        .prefs-container {
+            border-inline-end: unset;
+            overflow-y: auto;
+            width: 100%;
+            max-height: 70vh;
+            gap: 1rem;
+            padding-bottom: rem(4px); // to prevent the scrollbar to show before adding prefs
+
+            
         li {
-            padding: rem(24px);
+            margin-bottom: unset;
+        }
+        }
+
+        .add-input-wrapper {
+            position: sticky;
+            bottom: 0;
+            gap: 0.5rem;
+        }
+
+        .pref-item {
+            margin-inline-end: 0.5rem;
+        }
+
+        .more-icon {
+            font-size: 1rem;
+        }
+    }
+
+    .react-tabs {
+        [class*="__tab-panel"] {
+            height: 100%;
+
+            .selection-title {
+                height: 100%;
+            }
         }
     }
 }
