--- a/src/assets/styles/views/_personDetails.scss
+++ b/src/assets/styles/views/_personDetails.scss
@@ -36,18 +36,26 @@
             }
 
             .pref-container {
-                position: relative;
-
                 .edit-menu-container {
+                    direction: rtl;
                     position: absolute;
-                    bottom: -50px;
-                    width: 150px;
-                    height: 50px;
+                    left: rem(-10px);
                     background-color: #fff;
                     z-index: 1;
                     border: 1px solid #ddd;
-                    border-radius: 16px;
+                    border-radius: 8px;
+                    overflow: hidden;
+
+                    [class*="tag-wrapper"] {
+                        padding: 1rem 1.5rem;
+                        cursor: pointer;
+
+                        &:hover {
+                            background-color: #ddd;
+                        }
+                    }
                 }
+
             }
         }
 
@@ -63,12 +71,12 @@
 
         .more-icon {
             font-size: 1rem;
+            user-select: none;
         }
     }
 
     .react-tabs {
         [class*="__tab-panel"] {
-            height: 100%;
 
             .selection-title {
                 height: 100%;
