added close on click on the screen of the dialog

--- a/src/assets/styles/componenets/_appDialog.scss
+++ b/src/assets/styles/componenets/_appDialog.scss
@@ -6,4 +6,11 @@
     padding: 1rem;
     max-height: 90vh;
     border-radius: 16px;
+
+    .close-dialog-btn {
+        font-size: 1rem;
+        position: relative;
+        left: -8px;
+        top: -8px;
+    }
 }
