--- a/src/assets/styles/views/_personDetails.scss
+++ b/src/assets/styles/views/_personDetails.scss
@@ -1,24 +1,37 @@
 .person-details {
     direction: rtl;
-    height: 100%;
+    min-height: 100vh;
+    grid-template-rows: 50px 1fr;
 
 
     .person-details-header {
         width: 100%;
         min-height: rem(50px);
         border-bottom: 1px solid #ddd;
+
+        .back-btn {
+            position: absolute;
+            left: 8px;
+        }
     }
 
     .side-nav {
+        max-height: 90vh;
         height: 100%;
         padding: 1rem;
         border-inline-end: 1px solid #ddd;
+
+        @include for-mobile-layout {
+            display: none;
+        }
     }
 
-    .prefs-container {
+    .prefs-container:not(.prefs-edit-mode) {
         width: fit-content;
         gap: 1.5rem;
         margin-bottom: 1.5rem;
+        overflow-y: auto;
+        padding: 1rem;
     }
 
     .person-edit {
@@ -28,6 +41,7 @@
             width: 100%;
             max-height: 70vh;
             gap: 1rem;
+            margin-bottom: 1.5rem;
             padding-bottom: rem(4px); // to prevent the scrollbar to show before adding prefs
 
 
@@ -82,5 +96,22 @@
                 height: 100%;
             }
         }
+    }
+
+    ::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    ::-webkit-scrollbar-track {
+        background-color: #eeeeee70;
+        border-radius: 100px;
+        margin-bottom: 5px;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        border-radius: 100px;
+        border: 3px solid transparent;
+        background-clip: content-box;
+        background-color: $clr5;
     }
 }
