--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -85,6 +85,11 @@ button,
     justify-content: center;
     align-items: center;
     letter-spacing: 1px;
+
+    &.contrast-color {
+        background-color: $clr5;
+        color: white;
+    }
 }
 
 input[type=checkbox]:checked {
